# mtusi_parser_spellings

./: camelot_test.ipynb  example_pdfplumber_tables.ipynb  main.ipynb  main.py  main_pdfplumber.ipynb  pyproject.toml
