[tool.poetry]
name = "mtusi-parser-spellings"
version = "0.1.0"
description = ""
authors = ["vayaka <korotivan2005@yandex.ru>"]
readme = "README.md"
packages = [{include = "mtusi_parser_spellings"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

