[tool.poetry]
name = "mtusi-parser-spellings"
version = "0.1.0"
description = ""
authors = ["vayaka <korotivan2005@yandex.ru>"]
readme = "README.md"
packages = [{include = "mtusi_parser_spellings"}]

[installer]
no-binary = ["pdftopng"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
tabula-py = "^2.7.0"
pdfplumber = "^0.10.2"
camelot-py = "^0.11.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

